@@ -1,6 +1,7 @@
 Changes for 0.11.0:
 
 * Fixed issue #76: Missing utf-8 error module.
+* Fixed issue #78: Get current date and time in microseconds resolution.
 * Fixed issue #81: Support for ARM macOS.
 
 
